@@ -1,5 +1,6 @@
 - diskdrake:
   o do not offer to check for bad blocks on btrfs (mga#12393)
+  o do not warn about no bootloader can boot RAID[^1] as grub2 can (mga#11324)
   o enable bad blocks checking on JFS
 - drakboot:
   o allow installing grub2 on XFS /
